--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My Bookmarks by Nick Thorpe</title>
+  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header>
-    <h1><img src="/images/logo.png" alt="bookmarking app" /></h1>
+  <header class="group">
+    <h1><img class="full-width-image" src="/images/logo.png" alt="bookmark app" /></h1>
   </header>
 
   <main>
-    <img src="/images/logo-no-text.png" alt="new-bookmark" />
   </main>
 
-  <footer class="navbar">
-    <button><img src="/images/new-button.png" alt="new-bookmark" /></button>
-    <button><img src="/images/filter-button.png" alt="filter" /></button>
+  <footer class="navbar group">
+    <button class="nav-button"><img src="/images/new-button.png" alt="new-bookmark" /></button>
+    <button class="nav-button"><img src="/images/filter-button.png" alt="filter" /></button>
   </footer>
 
   <!-- jquery -->
