added all view templates and completed page transitions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -21,14 +21,14 @@
   </main>
 
   <footer class="navbar group">
-    <button class="nav-button"><img src="/images/new-button.png" alt="new-bookmark" /></button>
+    <button id="add-bookmark-button" class="nav-button"><img src="/images/new-button.png" alt="new-bookmark" /></button>
     <button class="nav-button"><img src="/images/filter-button.png" alt="filter" /></button>
   </footer>
 
   <!-- jquery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <!-- base module -->
-  <script type="module" src="index.js"></script>
+  <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
