--- a/wireframe.html
+++ b/wireframe.html
@@ -2,7 +2,7 @@
 <div class="no-bookmarks">
   <img src="/images/logo-no-text.png" alt="new-bookmark" />
   <h2>No bookmarks!</h2>
-  <button class="button-lit">Add bookmark</button>
+  <button id="add-bookmark-button" class="button-lit">Add bookmark</button>
 </div>
 
 <!-- List View -->
