added listener to cancel button and added store

--- a/wireframe.html
+++ b/wireframe.html
@@ -43,7 +43,7 @@
       <textarea id="title" name="description" placeholder="write a description......"></textarea>
     </section>
     <section class="force-row">
-      <button class="button-unlit set-width">Cancel</button>
+      <button id="js-cancel-add" class="button-unlit set-width">Cancel</button>
       <input class="button-lit set-width" type="submit" value="Create">
     </section>
   </form>
