--- a/wireframe.html
+++ b/wireframe.html
@@ -48,3 +48,16 @@
     </section>
   </form>
 </div>
+
+<!-- Footer -->
+
+<button id="add-bookmark-button" class="nav-button"><img src="/images/new-button.png" alt="new-bookmark" /></button>
+<div class="dropup">
+  <button class="nav-button drop-button"><img src="/images/filter-button.png" alt="filter" /></button>
+  <div class="dropup-content">
+    <p>Filter Option</p>
+    <p>Filter Option</p>
+    <p>Filter Option</p>
+    <p>Filter Option</p>
+  </div>
+</div>
