--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="group">
-    <h1><img class="full-width-image" src="/images/logo.png" alt="bookmark app" /></h1>
+    <h1><img class="full-width-image" src="images/logo.png" alt="bookmark app" /></h1>
   </header>
 
   <main>
